@@ -14,6 +14,7 @@ Direct3D 10
 	* Deprecated InputLayout constructor taking (device, elements, signature) in favor of one taking (device, signature, elements).
 	* Reconfigured ShaderBytecode to be a ComObject wrapping ID3D10Blob.
 	* Reconfigured ShaderSignature to be a ComObject wrapping ID3D10Blob.
+	* Added missing Resource constants.
 
 Direct3D 11
 	* Added the UnorderedAccess member to BindFlags.
